fix: improve legibility of `Read More` buttons

--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -17,8 +17,8 @@
     @apply transition;
 
     &.button-outline {
-      @apply bg-transparent border-sky-700 text-sky-800;
-      @apply dark:border-sky-700 dark:text-sky-800;
+      @apply bg-transparent border-sky-700 text-sky-600;
+      @apply dark:border-sky-700 dark:text-sky-600;
 
       &:hover {
         @apply bg-sky-700/25 dark:text-sky-500;
